--- a/P5/jsDemo06B.html
+++ b/P5/jsDemo06B.html
@@ -12,7 +12,7 @@
     <p>Our first JavaScript script</p>
     <script id="s2">
       // Script with id s2
-      user = '<your name>'
+      user = 'Afrizal'
       document.writeln('<p><b>Hello ' + user + '<br>\nHello World!</b></p>')
       try {
         document.writeln('(1) The value of userAge is: ' + userAge + '<br>')
